# Copyright (C) 2020 Daniel Maksymow, Joël Krähemann
# 
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

sources = []

dynamic_library_suffix = 'unknown'
if host_machine.system() == 'linux'
  dynamic_library_suffix = '.so'
elif host_machine.system() == 'freebsd'
  dynamic_library_suffix = '.so'
elif host_machine.system() == 'dragonfly'
  dynamic_library_suffix = '.so'
elif host_machine.system() == 'netbsd'
  dynamic_library_suffix = '.so'
elif host_machine.system() == 'openbsd'
  dynamic_library_suffix = '.so'
elif host_machine.system() == 'darwin'
  dynamic_library_suffix = '.dylib'
elif host_machine.system() == 'windows'
  dynamic_library_suffix = '.dll'
else
  error('add support to other os systems')
endif
define_template = '-D@0@="@1@"'
# TODO: this is needed only by plugin
add_project_arguments(define_template.format('AGS_LIBRARY_SUFFIX',
                                             dynamic_library_suffix),
                      language: 'c')

ags_config = configuration_data({
  'AGS_WITH_W32API' : get_option('w32api'),
  'AGS_WITH_OSXAPI' : get_option('osxapi'),
  'AGS_WITH_ALSA' : get_option('alsa'),
  'AGS_WITH_OSS' : get_option('oss'),
  'AGS_WITH_CORE_AUDIO' : get_option('core_audio'),
  'AGS_WITH_JACK' : get_option('jack'),
  'AGS_WITH_PULSE' : get_option('pulse'),
  'AGS_WITH_WASAPI' : get_option('wasapi'),
  'AGS_WITH_LIBINSTPATCH' : false,
  'AGS_WITH_QUARTZ' : get_option('quartz'),
  'AGS_WITH_WEBKIT' : get_option('webkit'),
  'AGS_WITH_GSTREAMER' : get_option('gstreamer'),
  'AGS_WITH_POPPLER' : get_option('poppler'),
                                 })

# TODO: it looks like this must be mandatory
ags_config.set('AGS_WITH_LIBINSTPATCH', true)

configure_file(output: 'config.h', configuration: ags_config)

common_dependencies = [
  m_dependency,
  glib_dependency,
  gobject_dependency,
  gthread_dependency,
  gio_dependency,
  xml2_dependency,
  compiler.find_library('uuid', required: true),
]

compiler_flags = []
# TODO: watch out!
fix_me_and_disable = true
if fix_me_and_disable
  compiler_flags += '-w'
endif

libags_sources = files(
  'util/ags_destroy_util.c',
  'util/ags_id_generator.c',
  'util/ags_list_util.c',
  'util/ags_soundcard_helper.c',  
  'lib/ags_buffer_util.c',
  'lib/ags_complex.c',
  'lib/ags_conversion.c',
  'lib/ags_endian.c',
  'lib/ags_function.c',
  'lib/ags_log.c',
  'lib/ags_math_util.c',
  'lib/ags_regex.c',
  'lib/ags_solver_matrix.c',
  'lib/ags_solver_polynomial.c',
  'lib/ags_solver_vector.c',
  'lib/ags_string_util.c',
  'lib/ags_time.c',
  'lib/ags_turtle.c',
  'lib/ags_turtle_manager.c',
  'lib/ags_uuid.c',
  'object/ags_applicable.c',
  'object/ags_application_context.c',
  'object/ags_config.c',
  'object/ags_connectable.c',
  'object/ags_countable.c',
  'object/ags_cursor.c',
  'object/ags_globals.c',
  'object/ags_main_loop.c',
  'object/ags_marshal.c',
  'object/ags_mutable.c',
  'object/ags_plugin.c',
  'object/ags_portlet.c',
  'object/ags_priority.c',
  'object/ags_seekable.c',
  'object/ags_sequencer.c',
  'object/ags_soundcard.c',
  'object/ags_sound_server.c',
  'object/ags_tactable.c',
  'file/ags_file.c',
  'file/ags_file_id_ref.c',
  'file/ags_file_launch.c',
  'file/ags_file_link.c',
  'file/ags_file_lookup.c',
)

libags_dependencies = [
  common_dependencies,
  crypt_dependency,
]

libags = library('ags',
  libags_sources,
  c_args: compiler_flags,
  include_directories: [includes],
  dependencies: libags_dependencies,
)

libags_thread_sources = files(
  'thread/ags_concurrency_provider.c',
  'thread/ags_destroy_worker.c',
  'thread/ags_generic_main_loop.c',
  'thread/ags_message_delivery.c',
  'thread/ags_message_envelope.c',
  'thread/ags_message_queue.c',
  'thread/ags_returnable_thread.c',
  'thread/ags_task.c',
  'thread/ags_task_completion.c',
  'thread/ags_task_launcher.c',
  'thread/ags_thread_application_context.c',
  'thread/ags_thread.c',
  'thread/ags_thread_pool.c',
  'thread/ags_timestamp.c',
  'thread/ags_worker_thread.c',
)

libags_thread_dependencies = [
  common_dependencies,
]

libags_thread = library('ags_thread',
  libags_thread_sources,
  c_args: compiler_flags,
  include_directories: [includes],
  dependencies: libags_thread_dependencies,
  link_with: [
    libags,
  ]
)

libags_server_sources = files(
  'server/ags_registry.c',
  'server/ags_server_application_context.c',
  'server/ags_server.c',
  'server/ags_server_status.c',
  'server/ags_service_provider.c',
  'server/controller/ags_controller.c',
  'server/controller/ags_front_controller.c',
  'server/controller/ags_plugin_controller.c',
  'server/security/ags_authentication.c',
  'server/security/ags_authentication_manager.c',
  'server/security/ags_auth_security_context.c',
  'server/security/ags_business_group.c',
  'server/security/ags_business_group_manager.c',
  'server/security/ags_certificate.c',
  'server/security/ags_certificate_manager.c',
  'server/security/ags_password_store.c',
  'server/security/ags_password_store_manager.c',
  'server/security/ags_security_context.c',
  'server/security/ags_xml_authentication.c',
  'server/security/ags_xml_business_group.c',
  'server/security/ags_xml_certificate.c',
  'server/security/ags_xml_password_store.c',
)

libags_server_dependencies = [
  common_dependencies,
  dependency('libsoup-2.4'),
  crypt_dependency,
]

libags_server = library('libags_server',
  libags_server_sources,
  c_args: compiler_flags,
  include_directories: [includes],
  dependencies: libags_server_dependencies,
  link_with: [
    libags,
    libags_thread,
  ]
)

libags_audio_sources = files(
  'plugin/ags_base_plugin.c',
  'plugin/ags_dssi_manager.c',
  'plugin/ags_dssi_plugin.c',
  'plugin/ags_ladspa_conversion.c',
  'plugin/ags_ladspa_manager.c',
  'plugin/ags_ladspa_plugin.c',
  'plugin/ags_lv2_conversion.c',
  'plugin/ags_lv2_event_manager.c',
  'plugin/ags_lv2_log_manager.c',
  'plugin/ags_lv2_manager.c',
  'plugin/ags_lv2_option_manager.c',
  'plugin/ags_lv2_plugin.c',
  'plugin/ags_lv2_preset.c',
  'plugin/ags_lv2_preset_manager.c',
  'plugin/ags_lv2_turtle_parser.c',
  'plugin/ags_lv2_turtle_scanner.c',
  'plugin/ags_lv2ui_manager.c',
  'plugin/ags_lv2ui_plugin.c',
  'plugin/ags_lv2_urid_manager.c',
  'plugin/ags_lv2_uri_map_manager.c',
  'plugin/ags_lv2_worker.c',
  'plugin/ags_lv2_worker_manager.c',
  'plugin/ags_plugin_port.c',
  'audio/ags_acceleration.c',
  'audio/ags_audio_application_context.c',
  'audio/ags_audio_buffer_util.c',
  'audio/ags_audio.c',
  'audio/ags_audio_signal.c',
  'audio/ags_automation.c',
  'audio/ags_buffer.c',
  'audio/ags_channel.c',
  'audio/ags_char_buffer_util.c',
  'audio/ags_devin.c',
  'audio/ags_devout.c',
  'audio/ags_diatonic_scale.c',
  'audio/ags_fast_pitch_util.c',
  'audio/ags_fifoout.c',
  'audio/ags_filter_util.c',
  'audio/ags_fm_synth_util.c',
  'audio/ags_fourier_transform_util.c',
  'audio/ags_frequency_map.c',
  'audio/ags_frequency_map_manager.c',
  'audio/ags_fx_factory.c',
  'audio/ags_generic_recall_channel_run.c',
  'audio/ags_generic_recall_recycling.c',
  'audio/ags_input.c',
  'audio/ags_lfo_synth_util.c',
  'audio/ags_midi.c',
  'audio/ags_midiin.c',
  'audio/ags_notation.c',
  'audio/ags_note.c',
  'audio/ags_output.c',
  'audio/ags_pattern.c',
  'audio/ags_playback.c',
  'audio/ags_playback_domain.c',
  'audio/ags_port.c',
  'audio/ags_port_util.c',
  'audio/ags_preset.c',
  'audio/ags_recall_audio.c',
  'audio/ags_recall_audio_run.c',
  'audio/ags_recall_audio_signal.c',
  'audio/ags_recall.c',
  'audio/ags_recall_channel.c',
  'audio/ags_recall_channel_run.c',
  'audio/ags_recall_container.c',
  'audio/ags_recall_dependency.c',
  'audio/ags_recall_dssi.c',
  'audio/ags_recall_dssi_run.c',
  'audio/ags_recall_factory.c',
  'audio/ags_recall_id.c',
  'audio/ags_recall_ladspa.c',
  'audio/ags_recall_ladspa_run.c',
  'audio/ags_recall_lv2.c',
  'audio/ags_recall_lv2_run.c',
  'audio/ags_recall_recycling.c',
  'audio/ags_recycling.c',
  'audio/ags_recycling_context.c',
  'audio/ags_sequencer_util.c',
  'audio/ags_sf2_synth_generator.c',
  'audio/ags_sf2_synth_util.c',
  'audio/ags_sfz_synth_generator.c',
  'audio/ags_sfz_synth_util.c',
  'audio/ags_sound_enums.c',
  'audio/ags_soundcard_util.c',
  'audio/ags_sound_provider.c',
  'audio/ags_synth_generator.c',
  'audio/ags_synth_util.c',
  'audio/ags_track.c',
  'audio/ags_wave.c',
  'audio/audio-unit/ags_audio_unit_client.c',
  'audio/audio-unit/ags_audio_unit_devin.c',
  'audio/audio-unit/ags_audio_unit_devout.c',
  'audio/audio-unit/ags_audio_unit_port.c',
  'audio/audio-unit/ags_audio_unit_server.c',
  'audio/core-audio/ags_core_audio_client.c',
  'audio/core-audio/ags_core_audio_devin.c',
  'audio/core-audio/ags_core_audio_devout.c',
  'audio/core-audio/ags_core_audio_midiin.c',
  'audio/core-audio/ags_core_audio_port.c',
  'audio/core-audio/ags_core_audio_server.c',
  'audio/file/ags_audio_container.c',
  'audio/file/ags_audio_container_manager.c',
  'audio/file/ags_audio_file.c',
  'audio/file/ags_audio_file_link.c',
  'audio/file/ags_audio_file_manager.c',
  'audio/file/ags_ipatch.c',
  'audio/file/ags_ipatch_dls2_reader.c',
  'audio/file/ags_ipatch_gig_reader.c',
  'audio/file/ags_ipatch_sample.c',
  'audio/file/ags_ipatch_sf2_reader.c',
  'audio/file/ags_sfz_file.c',
  'audio/file/ags_sfz_group.c',
  'audio/file/ags_sfz_region.c',
  'audio/file/ags_sfz_sample.c',
  'audio/file/ags_sndfile.c',
  'audio/file/ags_sound_container.c',
  'audio/file/ags_sound_resource.c',
  'audio/fx/ags_fx_analyse_audio.c',
  'audio/fx/ags_fx_analyse_audio_processor.c',
  'audio/fx/ags_fx_analyse_audio_signal.c',
  'audio/fx/ags_fx_analyse_channel.c',
  'audio/fx/ags_fx_analyse_channel_processor.c',
  'audio/fx/ags_fx_analyse_recycling.c',
  'audio/fx/ags_fx_buffer_audio.c',
  'audio/fx/ags_fx_buffer_audio_processor.c',
  'audio/fx/ags_fx_buffer_audio_signal.c',
  'audio/fx/ags_fx_buffer_channel.c',
  'audio/fx/ags_fx_buffer_channel_processor.c',
  'audio/fx/ags_fx_buffer_recycling.c',
  'audio/fx/ags_fx_dssi_audio.c',
  'audio/fx/ags_fx_dssi_audio_processor.c',
  'audio/fx/ags_fx_dssi_audio_signal.c',
  'audio/fx/ags_fx_dssi_channel.c',
  'audio/fx/ags_fx_dssi_channel_processor.c',
  'audio/fx/ags_fx_dssi_recycling.c',
  'audio/fx/ags_fx_envelope_audio.c',
  'audio/fx/ags_fx_envelope_audio_processor.c',
  'audio/fx/ags_fx_envelope_audio_signal.c',
  'audio/fx/ags_fx_envelope_channel.c',
  'audio/fx/ags_fx_envelope_channel_processor.c',
  'audio/fx/ags_fx_envelope_recycling.c',
  'audio/fx/ags_fx_eq10_audio.c',
  'audio/fx/ags_fx_eq10_audio_processor.c',
  'audio/fx/ags_fx_eq10_audio_signal.c',
  'audio/fx/ags_fx_eq10_channel.c',
  'audio/fx/ags_fx_eq10_channel_processor.c',
  'audio/fx/ags_fx_eq10_recycling.c',
  'audio/fx/ags_fx_ladspa_audio.c',
  'audio/fx/ags_fx_ladspa_audio_processor.c',
  'audio/fx/ags_fx_ladspa_audio_signal.c',
  'audio/fx/ags_fx_ladspa_channel.c',
  'audio/fx/ags_fx_ladspa_channel_processor.c',
  'audio/fx/ags_fx_ladspa_recycling.c',
  'audio/fx/ags_fx_lv2_audio.c',
  'audio/fx/ags_fx_lv2_audio_processor.c',
  'audio/fx/ags_fx_lv2_audio_signal.c',
  'audio/fx/ags_fx_lv2_channel.c',
  'audio/fx/ags_fx_lv2_channel_processor.c',
  'audio/fx/ags_fx_lv2_recycling.c',
  'audio/fx/ags_fx_notation_audio.c',
  'audio/fx/ags_fx_notation_audio_processor.c',
  'audio/fx/ags_fx_notation_audio_signal.c',
  'audio/fx/ags_fx_notation_channel.c',
  'audio/fx/ags_fx_notation_channel_processor.c',
  'audio/fx/ags_fx_notation_recycling.c',
  'audio/fx/ags_fx_pattern_audio.c',
  'audio/fx/ags_fx_pattern_audio_processor.c',
  'audio/fx/ags_fx_pattern_audio_signal.c',
  'audio/fx/ags_fx_pattern_channel.c',
  'audio/fx/ags_fx_pattern_channel_processor.c',
  'audio/fx/ags_fx_pattern_recycling.c',
  'audio/fx/ags_fx_peak_audio.c',
  'audio/fx/ags_fx_peak_audio_processor.c',
  'audio/fx/ags_fx_peak_audio_signal.c',
  'audio/fx/ags_fx_peak_channel.c',
  'audio/fx/ags_fx_peak_channel_processor.c',
  'audio/fx/ags_fx_peak_recycling.c',
  'audio/fx/ags_fx_playback_audio.c',
  'audio/fx/ags_fx_playback_audio_processor.c',
  'audio/fx/ags_fx_playback_audio_signal.c',
  'audio/fx/ags_fx_playback_channel.c',
  'audio/fx/ags_fx_playback_channel_processor.c',
  'audio/fx/ags_fx_playback_recycling.c',
  'audio/fx/ags_fx_volume_audio.c',
  'audio/fx/ags_fx_volume_audio_processor.c',
  'audio/fx/ags_fx_volume_audio_signal.c',
  'audio/fx/ags_fx_volume_channel.c',
  'audio/fx/ags_fx_volume_channel_processor.c',
  'audio/fx/ags_fx_volume_recycling.c',
  'audio/jack/ags_jack_client.c',
  'audio/jack/ags_jack_devin.c',
  'audio/jack/ags_jack_devout.c',
  'audio/jack/ags_jack_midiin.c',
  'audio/jack/ags_jack_port.c',
  'audio/jack/ags_jack_server.c',
  'audio/midi/ags_midi_buffer_util.c',
  'audio/midi/ags_midi_builder.c',
  'audio/midi/ags_midi_file.c',
  'audio/midi/ags_midi_parser.c',
  'audio/midi/ags_midi_util.c',
  'audio/osc/ags_osc_buffer_util.c',
  'audio/osc/ags_osc_builder.c',
  'audio/osc/ags_osc_client.c',
  'audio/osc/ags_osc_connection.c',
  'audio/osc/ags_osc_message.c',
  'audio/osc/ags_osc_parser.c',
  'audio/osc/ags_osc_response.c',
  'audio/osc/ags_osc_server.c',
  'audio/osc/ags_osc_util.c',
  'audio/osc/ags_osc_websocket_connection.c',
  'audio/osc/ags_osc_xmlrpc_message.c',
  'audio/osc/ags_osc_xmlrpc_server.c',
  'audio/osc/controller/ags_osc_action_controller.c',
  'audio/osc/controller/ags_osc_config_controller.c',
  'audio/osc/controller/ags_osc_controller.c',
  'audio/osc/controller/ags_osc_export_controller.c',
  'audio/osc/controller/ags_osc_front_controller.c',
  'audio/osc/controller/ags_osc_info_controller.c',
  'audio/osc/controller/ags_osc_meter_controller.c',
  'audio/osc/controller/ags_osc_node_controller.c',
  'audio/osc/controller/ags_osc_plugin_controller.c',
  'audio/osc/controller/ags_osc_renew_controller.c',
  'audio/osc/controller/ags_osc_status_controller.c',
  'audio/osc/xmlrpc/ags_osc_xmlrpc_controller.c',
  'audio/pulse/ags_pulse_client.c',
  'audio/pulse/ags_pulse_devin.c',
  'audio/pulse/ags_pulse_devout.c',
  'audio/pulse/ags_pulse_port.c',
  'audio/pulse/ags_pulse_server.c',
  'audio/recall/ags_analyse_audio_signal.c',
  'audio/recall/ags_analyse_channel.c',
  'audio/recall/ags_analyse_channel_run.c',
  'audio/recall/ags_analyse_recycling.c',
  'audio/recall/ags_buffer_audio_signal.c',
  'audio/recall/ags_buffer_channel.c',
  'audio/recall/ags_buffer_channel_run.c',
  'audio/recall/ags_buffer_recycling.c',
  'audio/recall/ags_capture_wave_audio.c',
  'audio/recall/ags_capture_wave_audio_run.c',
  'audio/recall/ags_capture_wave_channel.c',
  'audio/recall/ags_capture_wave_channel_run.c',
  'audio/recall/ags_copy_audio_signal.c',
  'audio/recall/ags_copy_channel.c',
  'audio/recall/ags_copy_channel_run.c',
  'audio/recall/ags_copy_pattern_audio.c',
  'audio/recall/ags_copy_pattern_audio_run.c',
  'audio/recall/ags_copy_pattern_channel.c',
  'audio/recall/ags_copy_pattern_channel_run.c',
  'audio/recall/ags_copy_recycling.c',
  'audio/recall/ags_count_beats_audio.c',
  'audio/recall/ags_count_beats_audio_run.c',
  'audio/recall/ags_delay_audio.c',
  'audio/recall/ags_delay_audio_run.c',
  'audio/recall/ags_envelope_audio_signal.c',
  'audio/recall/ags_envelope_channel.c',
  'audio/recall/ags_envelope_channel_run.c',
  'audio/recall/ags_envelope_recycling.c',
  'audio/recall/ags_eq10_audio_signal.c',
  'audio/recall/ags_eq10_channel.c',
  'audio/recall/ags_eq10_channel_run.c',
  'audio/recall/ags_eq10_recycling.c',
  'audio/recall/ags_feed_audio_signal.c',
  'audio/recall/ags_feed_channel.c',
  'audio/recall/ags_feed_channel_run.c',
  'audio/recall/ags_feed_recycling.c',
  'audio/recall/ags_lfo_audio_signal.c',
  'audio/recall/ags_lfo_channel.c',
  'audio/recall/ags_lfo_channel_run.c',
  'audio/recall/ags_lfo_recycling.c',
  'audio/recall/ags_loop_channel.c',
  'audio/recall/ags_loop_channel_run.c',
  'audio/recall/ags_mute_audio.c',
  'audio/recall/ags_mute_audio_run.c',
  'audio/recall/ags_mute_audio_signal.c',
  'audio/recall/ags_mute_channel.c',
  'audio/recall/ags_mute_channel_run.c',
  'audio/recall/ags_mute_recycling.c',
  'audio/recall/ags_peak_audio_signal.c',
  'audio/recall/ags_peak_channel.c',
  'audio/recall/ags_peak_channel_run.c',
  'audio/recall/ags_peak_recycling.c',
  'audio/recall/ags_play_audio.c',
  'audio/recall/ags_play_audio_signal.c',
  'audio/recall/ags_play_channel.c',
  'audio/recall/ags_play_channel_run.c',
  'audio/recall/ags_play_channel_run_master.c',
  'audio/recall/ags_play_dssi_audio.c',
  'audio/recall/ags_play_dssi_audio_run.c',
  'audio/recall/ags_play_lv2_audio.c',
  'audio/recall/ags_play_lv2_audio_run.c',
  'audio/recall/ags_play_notation_audio.c',
  'audio/recall/ags_play_notation_audio_run.c',
  'audio/recall/ags_play_recycling.c',
  'audio/recall/ags_play_wave_audio.c',
  'audio/recall/ags_play_wave_audio_run.c',
  'audio/recall/ags_play_wave_channel.c',
  'audio/recall/ags_play_wave_channel_run.c',
  'audio/recall/ags_prepare_audio_signal.c',
  'audio/recall/ags_prepare_channel.c',
  'audio/recall/ags_prepare_channel_run.c',
  'audio/recall/ags_prepare_recycling.c',
  'audio/recall/ags_record_midi_audio.c',
  'audio/recall/ags_record_midi_audio_run.c',
  'audio/recall/ags_route_dssi_audio.c',
  'audio/recall/ags_route_dssi_audio_run.c',
  'audio/recall/ags_route_lv2_audio.c',
  'audio/recall/ags_route_lv2_audio_run.c',
  'audio/recall/ags_rt_stream_audio_signal.c',
  'audio/recall/ags_rt_stream_channel.c',
  'audio/recall/ags_rt_stream_channel_run.c',
  'audio/recall/ags_rt_stream_recycling.c',
  'audio/recall/ags_stream_audio_signal.c',
  'audio/recall/ags_stream_channel.c',
  'audio/recall/ags_stream_channel_run.c',
  'audio/recall/ags_stream_recycling.c',
  'audio/recall/ags_volume_audio_signal.c',
  'audio/recall/ags_volume_channel.c',
  'audio/recall/ags_volume_channel_run.c',
  'audio/recall/ags_volume_recycling.c',
  'audio/task/ags_add_audio.c',
  'audio/task/ags_add_audio_signal.c',
  'audio/task/ags_add_effect.c',
  'audio/task/ags_add_note.c',
  'audio/task/ags_add_soundcard.c',
  'audio/task/ags_apply_bpm.c',
  'audio/task/ags_apply_presets.c',
  'audio/task/ags_apply_sequencer_length.c',
  'audio/task/ags_apply_sf2_synth.c',
  'audio/task/ags_apply_sfz_synth.c',
  'audio/task/ags_apply_sound_config.c',
  'audio/task/ags_apply_synth.c',
  'audio/task/ags_apply_tact.c',
  'audio/task/ags_cancel_audio.c',
  'audio/task/ags_cancel_channel.c',
  'audio/task/ags_clear_audio_signal.c',
  'audio/task/ags_clear_buffer.c',
  'audio/task/ags_crop_note.c',
  'audio/task/ags_export_output.c',
  'audio/task/ags_free_selection.c',
  'audio/task/ags_link_channel.c',
  'audio/task/ags_move_note.c',
  'audio/task/ags_open_file.c',
  'audio/task/ags_open_sf2_instrument.c',
  'audio/task/ags_open_sf2_sample.c',
  'audio/task/ags_open_sfz_file.c',
  'audio/task/ags_open_single_file.c',
  'audio/task/ags_open_wave.c',
  'audio/task/ags_remove_audio.c',
  'audio/task/ags_remove_audio_signal.c',
  'audio/task/ags_remove_note.c',
  'audio/task/ags_remove_soundcard.c',
  'audio/task/ags_reset_amplitude.c',
  'audio/task/ags_reset_fx_analyse.c',
  'audio/task/ags_reset_fx_peak.c',
  'audio/task/ags_reset_note.c',
  'audio/task/ags_reset_peak.c',
  'audio/task/ags_resize_audio.c',
  'audio/task/ags_seek_soundcard.c',
  'audio/task/ags_set_audio_channels.c',
  'audio/task/ags_set_buffer_size.c',
  'audio/task/ags_set_device.c',
  'audio/task/ags_set_format.c',
  'audio/task/ags_set_muted.c',
  'audio/task/ags_set_samplerate.c',
  'audio/task/ags_start_audio.c',
  'audio/task/ags_start_channel.c',
  'audio/task/ags_start_sequencer.c',
  'audio/task/ags_start_soundcard.c',
  'audio/task/ags_stop_sequencer.c',
  'audio/task/ags_stop_soundcard.c',
  'audio/task/ags_switch_buffer_flag.c',
  'audio/task/ags_tic_device.c',
  'audio/task/ags_toggle_pattern_bit.c',
  'audio/thread/ags_audio_loop.c',
  'audio/thread/ags_audio_thread.c',
  'audio/thread/ags_channel_thread.c',
  'audio/thread/ags_export_thread.c',
  'audio/thread/ags_sequencer_thread.c',
  'audio/thread/ags_sf2_loader.c',
  'audio/thread/ags_sfz_loader.c',
  'audio/thread/ags_soundcard_thread.c',
  'audio/thread/ags_wave_loader.c',
  'audio/wasapi/ags_wasapi_devin.c',
  'audio/wasapi/ags_wasapi_devout.c',
)

if get_option('gstreamer')
libags_audio_sources += files(
    'audio/file/ags_gstreamer_file.c',
  )
endif

libags_audio_dependencies = [
  common_dependencies,
  dl_dependency,
  soup_dependency,
  instpatch_dependency,
  samplerate_dependency,
  fftw3_dependency,
]

if get_option('alsa')
  libags_audio_dependencies += alsa_dependency
endif

if get_option('jack')
  libags_audio_dependencies += jack_dependency
endif

if get_option('pulse')
  libags_audio_dependencies += dependency('libpulse')
endif

if get_option('gstreamer')
  libags_audio_dependencies += gstreamer_dependency + gstreamer_audio_dependency + gstreamer_video_dependency + gstreamer_app_dependency + gstreamer_pbutils_dependency
endif

libags_audio = library('ags_audio',
  libags_audio_sources,
  c_args: compiler_flags,
  include_directories: [includes],
  dependencies: libags_audio_dependencies,
  link_with: [
    libags,
    libags_thread,
    libags_server,
  ]
)

libags_gui_sources = files(
  'widget/ags_cartesian.c',
  'widget/ags_container.c',
  'widget/ags_dial.c',
  'widget/ags_expander.c',
  'widget/ags_expander_set.c',
  'widget/ags_hindicator.c',
  'widget/ags_hled_array.c',
  'widget/ags_hlevel_box.c',
  'widget/ags_hscale_box.c',
  'widget/ags_indicator.c',
  'widget/ags_led_array.c',
  'widget/ags_led.c',
  'widget/ags_level_box.c',
  'widget/ags_level.c',
  'widget/ags_notebook.c',
  'widget/ags_piano.c',
  'widget/ags_ruler.c',
  'widget/ags_scale_box.c',
  'widget/ags_scale.c',
  'widget/ags_scrolled_level_box.c',
  'widget/ags_scrolled_piano.c',
  'widget/ags_scrolled_scale_box.c',
  'widget/ags_vindicator.c',
  'widget/ags_vled_array.c',
  'widget/ags_vlevel_box.c',
  'widget/ags_vscale_box.c',
  'widget/ags_widget_marshal.c',
)

libags_gui_dependencies = [
  common_dependencies,
  dependency('gtk+-3.0'),
]

libags_gui = library('ags_gui',
  libags_gui_sources,
  c_args: compiler_flags,
  include_directories: [includes],
  dependencies: libags_gui_dependencies,
)

libgsequencer_sources = files(
  'X/ags_animation_window.c',
  'X/ags_audio_preferences.c',
  'X/ags_audio_preferences_callbacks.c',
  'X/ags_automation_editor.c',
  'X/ags_automation_editor_callbacks.c',
  'X/ags_automation_window.c',
  'X/ags_automation_window_callbacks.c',
  'X/ags_bulk_member.c',
  'X/ags_bulk_member_callbacks.c',
  'X/ags_connection_editor.c',
  'X/ags_connection_editor_callbacks.c',
  'X/ags_context_menu.c',
  'X/ags_dssi_browser.c',
  'X/ags_dssi_browser_callbacks.c',
  'X/ags_effect_bridge.c',
  'X/ags_effect_bridge_callbacks.c',
  'X/ags_effect_bulk.c',
  'X/ags_effect_bulk_callbacks.c',
  'X/ags_effect_line.c',
  'X/ags_effect_line_callbacks.c',
  'X/ags_effect_pad.c',
  'X/ags_effect_pad_callbacks.c',
  'X/ags_effect_separator.c',
  'X/ags_export_soundcard.c',
  'X/ags_export_soundcard_callbacks.c',
  'X/ags_export_window.c',
  'X/ags_export_window_callbacks.c',
  'X/ags_generic_preferences.c',
  'X/ags_generic_preferences_callbacks.c',
  'X/ags_input_collection_editor.c',
  'X/ags_input_collection_editor_callbacks.c',
  'X/ags_input_editor.c',
  'X/ags_input_editor_callbacks.c',
  'X/ags_input_listing_editor.c',
  'X/ags_input_listing_editor_callbacks.c',
  'X/ags_ladspa_browser.c',
  'X/ags_ladspa_browser_callbacks.c',
  'X/ags_line.c',
  'X/ags_line_callbacks.c',
  'X/ags_line_editor.c',
  'X/ags_line_editor_callbacks.c',
  'X/ags_line_member.c',
  'X/ags_line_member_callbacks.c',
  'X/ags_line_member_editor.c',
  'X/ags_line_member_editor_callbacks.c',
  'X/ags_link_collection_editor.c',
  'X/ags_link_collection_editor_callbacks.c',
  'X/ags_link_editor.c',
  'X/ags_link_editor_callbacks.c',
  'X/ags_listing_editor.c',
  'X/ags_listing_editor_callbacks.c',
  'X/ags_lv2_browser.c',
  'X/ags_lv2_browser_callbacks.c',
  'X/ags_machine.c',
  'X/ags_machine_callbacks.c',
  'X/ags_machine_editor.c',
  'X/ags_machine_editor_callbacks.c',
  'X/ags_machine_util.c',
  'X/ags_menu_action_callbacks.c',
  'X/ags_menu_bar.c',
  'X/ags_midi_dialog.c',
  'X/ags_midi_dialog_callbacks.c',
  'X/ags_midi_preferences.c',
  'X/ags_midi_preferences_callbacks.c',
  'X/ags_navigation.c',
  'X/ags_navigation_callbacks.c',
  'X/ags_notation_editor.c',
  'X/ags_notation_editor_callbacks.c',
  'X/ags_online_help_window.c',
  'X/ags_online_help_window_callbacks.c',
  'X/ags_osc_server_preferences.c',
  'X/ags_osc_server_preferences_callbacks.c',
  'X/ags_output_collection_editor.c',
  'X/ags_output_collection_editor_callbacks.c',
  'X/ags_output_editor.c',
  'X/ags_output_editor_callbacks.c',
  'X/ags_output_listing_editor.c',
  'X/ags_output_listing_editor_callbacks.c',
  'X/ags_pad.c',
  'X/ags_pad_callbacks.c',
  'X/ags_pad_editor.c',
  'X/ags_pad_editor_callbacks.c',
  'X/ags_performance_preferences.c',
  'X/ags_performance_preferences_callbacks.c',
  'X/ags_playback_window.c',
  'X/ags_playback_window_callbacks.c',
  'X/ags_plugin_browser.c',
  'X/ags_plugin_browser_callbacks.c',
  'X/ags_plugin_preferences.c',
  'X/ags_plugin_preferences_callbacks.c',
  'X/ags_preferences.c',
  'X/ags_preferences_callbacks.c',
  'X/ags_property_collection_editor.c',
  'X/ags_property_collection_editor_callbacks.c',
  'X/ags_property_editor.c',
  'X/ags_property_editor_callbacks.c',
  'X/ags_property_listing_editor.c',
  'X/ags_quit_dialog.c',
  'X/ags_quit_dialog_callbacks.c',
  'X/ags_resize_editor.c',
  'X/ags_sequencer_editor.c',
  'X/ags_sequencer_editor_callbacks.c',
  'X/ags_server_preferences.c',
  'X/ags_server_preferences_callbacks.c',
  'X/ags_sheet_editor.c',
  'X/ags_sheet_editor_callbacks.c',
  'X/ags_sheet_window.c',
  'X/ags_sheet_window_callbacks.c',
  'X/ags_soundcard_editor.c',
  'X/ags_soundcard_editor_callbacks.c',
  'X/ags_ui_provider.c',
  'X/ags_wave_editor.c',
  'X/ags_wave_editor_callbacks.c',
  'X/ags_wave_window.c',
  'X/ags_wave_window_callbacks.c',
  'X/ags_window.c',
  'X/ags_window_callbacks.c',
  'X/ags_xorg_application_context.c',
  'X/editor/ags_automation_edit_box.c',
  'X/editor/ags_automation_edit.c',
  'X/editor/ags_automation_edit_callbacks.c',
  'X/editor/ags_automation_meta.c',
  'X/editor/ags_automation_meta_callbacks.c',
  'X/editor/ags_automation_toolbar.c',
  'X/editor/ags_automation_toolbar_callbacks.c',
  'X/editor/ags_crop_note_dialog.c',
  'X/editor/ags_crop_note_dialog_callbacks.c',
  'X/editor/ags_envelope_dialog.c',
  'X/editor/ags_envelope_dialog_callbacks.c',
  'X/editor/ags_envelope_editor.c',
  'X/editor/ags_envelope_editor_callbacks.c',
  'X/editor/ags_envelope_info.c',
  'X/editor/ags_envelope_info_callbacks.c',
  'X/editor/ags_machine_radio_button.c',
  'X/editor/ags_machine_radio_button_callbacks.c',
  'X/editor/ags_machine_selection.c',
  'X/editor/ags_machine_selector.c',
  'X/editor/ags_machine_selector_callbacks.c',
  'X/editor/ags_move_note_dialog.c',
  'X/editor/ags_move_note_dialog_callbacks.c',
  'X/editor/ags_notation_edit.c',
  'X/editor/ags_notation_edit_callbacks.c',
  'X/editor/ags_notation_meta.c',
  'X/editor/ags_notation_meta_callbacks.c',
  'X/editor/ags_notation_toolbar.c',
  'X/editor/ags_notation_toolbar_callbacks.c',
  'X/editor/ags_pattern_envelope.c',
  'X/editor/ags_pattern_envelope_callbacks.c',
  'X/editor/ags_position_automation_cursor_dialog.c',
  'X/editor/ags_position_automation_cursor_dialog_callbacks.c',
  'X/editor/ags_position_notation_cursor_dialog.c',
  'X/editor/ags_position_notation_cursor_dialog_callbacks.c',
  'X/editor/ags_position_wave_cursor_dialog.c',
  'X/editor/ags_position_wave_cursor_dialog_callbacks.c',
  'X/editor/ags_ramp_acceleration_dialog.c',
  'X/editor/ags_ramp_acceleration_dialog_callbacks.c',
  'X/editor/ags_scrolled_automation_edit_box.c',
  'X/editor/ags_scrolled_wave_edit_box.c',
  'X/editor/ags_select_acceleration_dialog.c',
  'X/editor/ags_select_acceleration_dialog_callbacks.c',
  'X/editor/ags_select_buffer_dialog.c',
  'X/editor/ags_select_buffer_dialog_callbacks.c',
  'X/editor/ags_select_note_dialog.c',
  'X/editor/ags_select_note_dialog_callbacks.c',
  'X/editor/ags_sheet_edit.c',
  'X/editor/ags_sheet_edit_callbacks.c',
  'X/editor/ags_sheet_toolbar.c',
  'X/editor/ags_sheet_toolbar_callbacks.c',
  'X/editor/ags_vautomation_edit_box.c',
  'X/editor/ags_vwave_edit_box.c',
  'X/editor/ags_wave_edit_box.c',
  'X/editor/ags_wave_edit.c',
  'X/editor/ags_wave_edit_callbacks.c',
  'X/editor/ags_wave_meta.c',
  'X/editor/ags_wave_meta_callbacks.c',
  'X/editor/ags_wave_toolbar.c',
  'X/editor/ags_wave_toolbar_callbacks.c',
  'X/export/ags_machine_collection.c',
  'X/export/ags_machine_collection_callbacks.c',
  'X/export/ags_machine_collection_entry.c',
  'X/export/ags_machine_collection_entry_callbacks.c',
  'X/export/ags_midi_export_wizard.c',
  'X/export/ags_midi_export_wizard_callbacks.c',
  'X/export/ags_wave_export_dialog.c',
  'X/export/ags_wave_export_dialog_callbacks.c',
  'X/file/ags_simple_file.c',
  'X/import/ags_midi_import_wizard.c',
  'X/import/ags_midi_import_wizard_callbacks.c',
  'X/import/ags_track_collection.c',
  'X/import/ags_track_collection_callbacks.c',
  'X/import/ags_track_collection_mapper.c',
  'X/import/ags_track_collection_mapper_callbacks.c',
  'X/machine/ags_audiorec.c',
  'X/machine/ags_audiorec_callbacks.c',
  'X/machine/ags_cell_pattern.c',
  'X/machine/ags_cell_pattern_callbacks.c',
  'X/machine/ags_desk.c',
  'X/machine/ags_desk_callbacks.c',
  'X/machine/ags_desk_input_pad.c',
  'X/machine/ags_desk_input_pad_callbacks.c',
  'X/machine/ags_drum.c',
  'X/machine/ags_drum_callbacks.c',
  'X/machine/ags_drum_input_line.c',
  'X/machine/ags_drum_input_line_callbacks.c',
  'X/machine/ags_drum_input_pad.c',
  'X/machine/ags_drum_input_pad_callbacks.c',
  'X/machine/ags_drum_output_line.c',
  'X/machine/ags_drum_output_line_callbacks.c',
  'X/machine/ags_drum_output_pad.c',
  'X/machine/ags_drum_output_pad_callbacks.c',
  'X/machine/ags_dssi_bridge.c',
  'X/machine/ags_dssi_bridge_callbacks.c',
  'X/machine/ags_equalizer10.c',
  'X/machine/ags_equalizer10_callbacks.c',
  'X/machine/ags_ffplayer_bridge.c',
  'X/machine/ags_ffplayer_bridge_callbacks.c',
  'X/machine/ags_ffplayer_bulk_input.c',
  'X/machine/ags_ffplayer_bulk_input_callbacks.c',
  'X/machine/ags_ffplayer.c',
  'X/machine/ags_ffplayer_callbacks.c',
  'X/machine/ags_ffplayer_input_line.c',
  'X/machine/ags_ffplayer_input_line_callbacks.c',
  'X/machine/ags_ffplayer_input_pad.c',
  'X/machine/ags_ffplayer_input_pad_callbacks.c',
  'X/machine/ags_fm_oscillator.c',
  'X/machine/ags_fm_oscillator_callbacks.c',
  'X/machine/ags_fm_syncsynth.c',
  'X/machine/ags_fm_syncsynth_callbacks.c',
  'X/machine/ags_fm_synth.c',
  'X/machine/ags_fm_synth_callbacks.c',
  'X/machine/ags_fm_synth_input_line.c',
  'X/machine/ags_fm_synth_input_line_callbacks.c',
  'X/machine/ags_fm_synth_input_pad.c',
  'X/machine/ags_ladspa_bridge.c',
  'X/machine/ags_ladspa_bridge_callbacks.c',
  'X/machine/ags_live_dssi_bridge.c',
  'X/machine/ags_live_dssi_bridge_callbacks.c',
  'X/machine/ags_live_lv2_bridge.c',
  'X/machine/ags_live_lv2_bridge_callbacks.c',
  'X/machine/ags_lv2_bridge.c',
  'X/machine/ags_lv2_bridge_callbacks.c',
  'X/machine/ags_matrix_bridge.c',
  'X/machine/ags_matrix_bridge_callbacks.c',
  'X/machine/ags_matrix_bulk_input.c',
  'X/machine/ags_matrix_bulk_input_callbacks.c',
  'X/machine/ags_matrix.c',
  'X/machine/ags_matrix_callbacks.c',
  'X/machine/ags_mixer.c',
  'X/machine/ags_mixer_callbacks.c',
  'X/machine/ags_mixer_input_line.c',
  'X/machine/ags_mixer_input_pad.c',
  'X/machine/ags_oscillator.c',
  'X/machine/ags_oscillator_callbacks.c',
  'X/machine/ags_panel.c',
  'X/machine/ags_panel_callbacks.c',
  'X/machine/ags_panel_input_line.c',
  'X/machine/ags_panel_input_line_callbacks.c',
  'X/machine/ags_panel_input_pad.c',
  'X/machine/ags_pattern_box.c',
  'X/machine/ags_pattern_box_callbacks.c',
  'X/machine/ags_pitch_sampler.c',
  'X/machine/ags_pitch_sampler_callbacks.c',
  'X/machine/ags_pitch_sampler_file.c',
  'X/machine/ags_pitch_sampler_file_callbacks.c',
  'X/machine/ags_sf2_synth.c',
  'X/machine/ags_sf2_synth_callbacks.c',
  'X/machine/ags_sfz_synth.c',
  'X/machine/ags_sfz_synth_callbacks.c',
  'X/machine/ags_spectrometer.c',
  'X/machine/ags_spectrometer_callbacks.c',
  'X/machine/ags_syncsynth.c',
  'X/machine/ags_syncsynth_callbacks.c',
  'X/machine/ags_synth.c',
  'X/machine/ags_synth_callbacks.c',
  'X/machine/ags_synth_input_line.c',
  'X/machine/ags_synth_input_line_callbacks.c',
  'X/machine/ags_synth_input_pad.c',
  'X/osc/controller/ags_ui_osc_renew_controller.c',
  'X/task/ags_simple_file_read.c',
  'X/task/ags_simple_file_write.c',
)

libgsequencer_dependencies = [
  common_dependencies,
  gtk_dependency,
  soup_dependency,
  xml2_dependency,
#TODO: i think that shouldn't be dependency for X
  instpatch_dependency,
  dl_dependency,
]

libgsequencer_compiler_flags = compiler_flags
if get_option('poppler')
  libgsequencer_dependencies += poppler_dependency
  libgsequencer_compiler_flags += define_template.format('DOCDIR',
                                             get_option('datadir'))
endif

if get_option('webkit')
  libgsequencer_dependencies += webkit_dependency
endif

if get_option('poppler')
  libgsequencer_dependencies += poppler_dependency
endif

if get_option('gstreamer')
  libgsequencer_dependencies += gstreamer_dependency + gstreamer_audio_dependency + gstreamer_video_dependency + gstreamer_app_dependency + gstreamer_pbutils_dependency
endif

libgsequencer = library('gsequencer',
  libgsequencer_sources,
  c_args: libgsequencer_compiler_flags,
  include_directories: [includes],
  dependencies: libgsequencer_dependencies,
  link_with: [
    libags,
    libags_thread,
    libags_server,
    libags_audio,
    libags_gui,
  ]
)

gsequencer_dependencies = [
  common_dependencies,
  dependency('gtk+-3.0'),
  dependency('libsoup-2.4'),
  dependency('libinstpatch-1.0'),
#  compiler.find_library('crypt', required: true),
  ]

midi2xml_dependencies = [
  common_dependencies,
  dependency('libsoup-2.4'),
  dependency('libinstpatch-1.0'),
#  compiler.find_library('crypt', required: true),
  ]


if get_option('gstreamer')
  gsequencer_dependencies += gstreamer_dependency + gstreamer_audio_dependency + gstreamer_video_dependency + gstreamer_app_dependency + gstreamer_pbutils_dependency
endif

gsequencer_sources = files(
  'gsequencer_main.c'
)

gsequencer = executable(
  'gsequencer',
  gsequencer_sources,
  c_args: compiler_flags,
  include_directories: [includes],
  dependencies: [gsequencer_dependencies],
  link_with: [
    libags,
    libags_thread,
    libags_server,
    libags_audio,
    libags_gui,
    libgsequencer,
  ],
  install: true,
)

midi2xml_sources = files(
  'midi2xml_main.c'
)

midi2xml = executable(
  'midi2xml',
  midi2xml_sources,
  c_args: compiler_flags,
  include_directories: [includes],
  dependencies: [midi2xml_dependencies],
  link_with: [
    libags,
    libags_audio,
  ],
  install: true,
)

install_data(join_paths(meson.source_root(), 'gsequencer.share/styles/ags.css'),
             install_dir: join_paths(get_option('datadir'),
                                     meson.project_name(), 'styles'))

subdir('test')
