#Copyright (C) 2005-2020 Joel Kraehemann
# 
# Copying and distribution of this file, with or without modification,
# are permitted in any medium without royalty provided the copyright
# notice and this notice are preserved.  This file is offered as-is,
# without any warranty.

EXTRA_DIST = \
	ags-docs-api.m4 \
	ags-listings.m4 \
	ags-marshallers.m4 \
	ags-symbols.m4 \
	codeset.m4 \
	extern-inline.m4 \
	fcntl-o.m4 \
	gettext.m4 \
	glibc2.m4 \
	glibc21.m4 \
	iconv.m4 \
	intdiv0.m4 \
	intl.m4 \
	intldir.m4 \
	intlmacosx.m4 \
	intmax.m4 \
	inttypes-pri.m4 \
	inttypes_h.m4 \
	lcmessage.m4 \
	lib-ld.m4 \
	lib-link.m4 \
	lib-prefix.m4 \
	libtool.m4 \
	lock.m4 \
	longlong.m4 \
	ltoptions.m4 \
	ltsugar.m4 \
	ltversion.m4 \
	lt~obsolete.m4 \
	nls.m4 \
	po.m4 \
	printf-posix.m4 \
	progtest.m4 \
	size_max.m4 \
	stdint_h.m4 \
	threadlib.m4 \
	uintmax_t.m4 \
	visibility.m4 \
	wchar_t.m4 \
	wint_t.m4 \
	xsize.m4
